--- a/Pages/Cattle/Cattle.razor
+++ b/Pages/Cattle/Cattle.razor
@@ -1,6 +1,6 @@
 ﻿@page "/cattle"
 @using Microsoft.AspNetCore.Authorization
-
+@attribute [Authorize]
 
 <AUI.Components.Functional.Pictures Focus="Farms" FormType="Animals" Mode="Many" AnimalType="Cattle" />
 
