--- a/Pages/Home/Livestock.razor
+++ b/Pages/Home/Livestock.razor
@@ -1,8 +1,8 @@
 ﻿<div class="col-sm col-md-6 col-lg-4">
-    <div class="p-4 mb-4 w-100" style="border-radius: 0px; background: #ffffff; box-shadow: 5px 5px 10px #949494, -5px -5px 10px #ffffff; width: 250px;">
+    <div class="p-4 mb-4 w-100 d-card">
         <p><b>Animals</b></p>
         <div class="d-flex justify-content-between flex-row">
-            <div>Goats</div>
+            <div>Cattle</div>
             <div>XXX</div>
         </div>
         <div class="d-flex justify-content-between flex-row my-3">
