--- a/Pages/Home/People.razor
+++ b/Pages/Home/People.razor
@@ -7,7 +7,7 @@
 
 
 <div class="col-sm col-md-12 col-lg-4">
-    <div class="p-4 mb-4 w-100" style="border-radius: 0px; background: #ffffff; box-shadow: 5px 5px 10px #949494, -5px -5px 10px #ffffff; width: 250px;">
+    <div class="p-4 mb-4 w-100 d-card">
         <p><b>People</b></p>
 
         <div class="d-flex justify-content-between flex-row my-3">
