--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -30,24 +30,46 @@ app {
     flex: 1;
 }
 
-    .main .top-row {
-        background-color: #f7f7f7;
-        border-bottom: 1px solid #d6d5d5;
-        justify-content: flex-end;
-    }
-
-        .main .top-row > a, .main .top-row .btn-link {
-            white-space: nowrap;
-            margin-left: 1.5rem;
-        }
-
-.main .top-row a:first-child {
-    overflow: hidden;
-    text-overflow: ellipsis;
+.upper-shadow {
+    border-radius: 0px;
+    background: #ffffff;
+    box-shadow: inset -5px -5px 13px #c7c7c7, inset 5px 5px 13px #ffffff;
 }
 
+.lower-shadow {
+    width: 25rem;
+    border-radius: 0px;
+    background: #ffffff;
+    box-shadow: -5px -5px 85px #e8e8e8, 5px 5px 85px #ffffff;
+    padding: 20px;
+    margin-top: 100px;
+}
+
+.d-card {
+    border-radius: 0px;
+    background: linear-gradient(225deg, #ffffff, #e6e6e6);
+    box-shadow: -5px 5px 19px #666666, 5px -5px 19px #ffffff;
+    width: 250px;
+}
+
+.main .top-row {
+    background-color: #f7f7f7;
+    border-bottom: 1px solid #d6d5d5;
+    justify-content: flex-end;
+}
+
+    .main .top-row > a, .main .top-row .btn-link {
+        white-space: nowrap;
+        margin-left: 1.5rem;
+    }
+
+    .main .top-row a:first-child {
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(5, 39, 103) 0%, #3a0647 70%);
+    background-color: rgba(2,2,2,0.4);
 }
 
     .sidebar .top-row {
@@ -88,13 +110,13 @@ app {
         }
 
             .sidebar .nav-item a.active {
-                background-color: rgba(255,255,255,0.25);
+                background-color: rgba(208, 240, 192,0.5);
                 color: white;
             }
 
             .sidebar .nav-item a:hover {
-                background-color: rgba(255,255,255,0.1);
-                color: white;
+                background-color: rgba(255,255,255,0.0);
+                color: green;
             }
 
 .content {
@@ -129,12 +151,12 @@ app {
     z-index: 1000;
 }
 
-#blazor-error-ui .dismiss {
-    cursor: pointer;
-    position: absolute;
-    right: 0.75rem;
-    top: 0.5rem;
-}
+    #blazor-error-ui .dismiss {
+        cursor: pointer;
+        position: absolute;
+        right: 0.75rem;
+        top: 0.5rem;
+    }
 
 @media (max-width: 767.98px) {
     .main .top-row:not(.auth) {
