--- a/Shared/Login.razor
+++ b/Shared/Login.razor
@@ -52,6 +52,7 @@
 
     private async Task HandleLogin()
     {
+        Debug.WriteLine("Calling login function");
         ShowErrors = false;
         
 
