--- a/Pages/Home/Livestock.razor
+++ b/Pages/Home/Livestock.razor
@@ -3,19 +3,19 @@
         <p><b>Animals</b></p>
         <div class="d-flex justify-content-between flex-row">
             <div>Cattle</div>
-            <div>XXX</div>
+            <div>39</div>
         </div>
         <div class="d-flex justify-content-between flex-row my-3">
             <div>Goats</div>
-            <div>XXX</div>
+            <div>14</div>
         </div>
         <div class="d-flex justify-content-between flex-row mb-3">
             <div>Pigs</div>
-            <div>XXX</div>
+            <div>0</div>
         </div>
-        <div class="d-flex justify-content-between flex-row">
+       <div class="d-flex justify-content-between flex-row">
             <div>Chicken</div>
-            <div>XXX</div>
+            <div>0</div>
         </div>
     </div>
 </div>
