--- a/Pages/People/People.razor
+++ b/Pages/People/People.razor
@@ -122,7 +122,7 @@
                         </div>
                     </div>
 
-                    @if (Farms != null && Employee.Purpose !="Admin")
+                    @if (Farms != null && Employee.Purpose != "Admin")
                     {
                         <div class="form-group row">
                             <label class="col-sm-4 col-form-label" for="Farm">Farm</label>
@@ -191,6 +191,37 @@
 </div>
 
 
+<div class="modal fade" id="RemoveWorkers" tabindex="-1" role="dialog" aria-labelledby="Remove New Farm" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h5 class="modal-title" id="RemoveWorkers">
+                    Confirm Deletion
+                </h5>
+
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div class="modal-body">
+                Are you sure you want to delete @UserName ?
+            </div>
+
+            <div class="modal-footer">
+                @if (AddStatus != null)
+                {
+                    <span class="pl-5 small"><b>@AddStatus</b></span>
+                }
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                <button class="btn btn-danger" @onclick="(async () => await deleteUser())" type="submit">Yes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 @if (Humans == null)
 {
     <p class="py-5 pl-5"><em>Calling farm people.....</em></p>
@@ -204,12 +235,12 @@ else
 
             <thead class="thead-dark">
                 <tr>
-                    <th>Sex</th>
-                    <th>NRC</th>
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>Phone</th>
                     <th>Email</th>
+                    <th>Sex</th>
+                    <th>NRC</th>
                     <th>Role</th>
                     <th>Fire</th>
                 </tr>
@@ -217,17 +248,16 @@ else
             <tbody>
                 @foreach (var person in Humans)
                 {
-                    <tr>
-                        <td>@person.Sex</td>
-                        <td>@person.NRC</td>
-                        <td>@person.FirstName</td>
-                        <td>@person.LastName</td>
-                        <td>@person.PhoneNumber</td>
-                        <td>@person.Email</td>
-                        <td>@(person.PasswordHash == "User" ? "Worker" : person.PasswordHash)</td>
-                        <td><button>🗑</button></td>
-                    </tr>
-
+                <tr>
+                    <td>@person.FirstName</td>
+                    <td>@person.LastName</td>
+                    <td>@person.PhoneNumber</td>
+                    <td>@person.Email</td>
+                    <td>@person.Sex</td>
+                    <td>@person.NRC</td>
+                    <td>@(person.PasswordHash == "User" ? "Worker" : person.PasswordHash)</td>
+                    <td><button type="button" @onclick="(e => GetId(e, person.Email, person.FullName))" data-toggle="modal" data-target="#RemoveWorkers">🗑</button></td>
+                </tr>
                 }
             </tbody>
 
@@ -244,8 +274,9 @@ else
     string FarmID;
     string selected;
     private string AddStatus { get; set; }
+    private string UserID { get; set; }
+    private string UserName { get; set; }
     private List<Farms> Farms;
-
     private AUI.Shared.Classes.User.RegisterModel Employee { get; set; } = new AUI.Shared.Classes.User.RegisterModel();
     List<AUI.Shared.Classes.User.Users> Humans = null;
 
@@ -263,6 +294,8 @@ else
             //Configure default ID
             Employee.FarmID = 0;
         }
+
+
     }
 
     protected async void OurPeope()
@@ -282,12 +315,32 @@ else
         }
     }
 
+    private void GetId(MouseEventArgs e, string email, string name)
+    {
+        UserID = email;
+        UserName = name;
+        AddStatus = null;
+    }
+
+
     private async Task AddPeople()
     {
         //Clear pevious Addstaus
         AddStatus = null;
 
         var add = await Http.PostAsJsonAsync<AUI.Shared.Classes.User.RegisterModel>($"api/Accounts", Employee);
+        AddStatus = "Sending Data....";
         AddStatus = add.IsSuccessStatusCode ? $"Added {Employee.LastName}" : $"Failed to add {Employee.LastName}";
+        await InvokeAsync(StateHasChanged);
     }
+
+    private async Task deleteUser()
+    {
+        var remove = await Http.DeleteAsync($"api/Users/{UserID}");
+        AddStatus = $"Removing {UserName}....";
+        AddStatus = remove.IsSuccessStatusCode ? $"Removed {UserName}" : $"Failed to remove {UserName}";
+        await InvokeAsync(StateHasChanged);
+    }
+
+
 }
